added latest work Walkthrough AnypointStudio 6.5 - Structuring Mule Apps finished

--- a/apdev-examples/src/main/app/mule-deploy.properties
+++ b/apdev-examples/src/main/app/mule-deploy.properties
@@ -1,6 +1,6 @@
 #** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Tue Feb 19 12:47:12 GMT 2019
+#Tue Feb 19 16:02:45 GMT 2019
 redeployment.enabled=true
 encoding=UTF-8
 domain=default
-config.resources=apdev-examples.xml
+config.resources=accounts.xml,apdev-examples.xml,global.xml
